--- a/app/src/main/res/layouts/buy_tokens_fragment_layouts/layout/switch_acc_fab_content_layout.xml
+++ b/app/src/main/res/layouts/buy_tokens_fragment_layouts/layout/switch_acc_fab_content_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.motion.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/switchAccFabContent"
     android:layout_width="wrap_content"
@@ -106,4 +106,4 @@
         app:layout_constraintStart_toEndOf="@+id/radioBtnAcc1"
         app:layout_constraintTop_toTopOf="@+id/radioBtnAcc1" />
 
-</android.support.constraint.ConstraintLayout>
+</android.support.constraint.motion.MotionLayout>
