--- a/app/src/main/res/layouts/my_purchase_history_fragment_layouts/layout/purchase_history_fab_layout.xml
+++ b/app/src/main/res/layouts/my_purchase_history_fragment_layouts/layout/purchase_history_fab_layout.xml
@@ -4,63 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent">
+    android:background="@drawable/purchase_hist_fab_bg">
 
-    <LinearLayout
-        android:id="@+id/fabButtonsContainer"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btnText"
+        android:layout_width="30dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/purchase_hist_fab_bg"
-        android:orientation="vertical"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="10dp"
+        android:layout_weight="0.5"
+        android:background="@android:color/transparent"
+        android:drawableTop="@drawable/text_icon"
+        android:fontFamily="@font/lato_regular"
+        android:text="@string/text"
+        android:textAllCaps="false"
+        android:textColor="@color/custom_grey"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnGraph"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:layout_weight="0.5"
+        android:background="@android:color/transparent"
+        android:drawableTop="@drawable/graph_icon_grey"
+        android:fontFamily="@font/lato_regular"
+        android:text="@string/graph"
+        android:textAllCaps="false"
+        android:textColor="@color/custom_grey"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnText" />
 
-        <Button
-            android:id="@+id/btnText"
-            android:layout_width="30dp"
-            android:layout_height="16dp"
-            android:layout_marginLeft="13dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="0.5"
-            android:background="@android:color/transparent"
-            android:drawableTop="@drawable/text_icon"
-            android:fontFamily="@font/lato_regular"
-            android:text="@string/text"
-            android:textAllCaps="false"
-            android:textColor="@color/custom_grey"
-            android:textSize="14sp" />
-
-        <Button
-            android:id="@+id/btnGraph"
-            android:layout_width="30dp"
-            android:layout_height="16dp"
-            android:layout_marginLeft="13dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="15dp"
-            android:layout_weight="0.5"
-            android:background="@android:color/transparent"
-            android:drawableTop="@drawable/graph_icon_grey"
-            android:fontFamily="@font/lato_regular"
-            android:text="@string/graph"
-            android:textAllCaps="false"
-            android:textColor="@color/custom_grey"
-            android:textSize="10sp" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/txtShwDate"
-        android:layout_width="100dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/text_date_bg"
-        android:gravity="center"
-        android:paddingBottom="6dp"
-        android:text="5/10/2019"
-        android:textAlignment="gravity"
-        app:layout_constraintBottom_toBottomOf="@+id/fabButtonsContainer"
-        app:layout_constraintEnd_toStartOf="@+id/fabButtonsContainer"
-        app:layout_constraintTop_toTopOf="@+id/fabButtonsContainer"
-        app:layout_constraintVertical_bias="0.25" />
 </android.support.constraint.ConstraintLayout>
