--- a/app/src/main/res/layouts/my_purchase_history_fragment_layouts/layout/purchase_history_fragment_layout_state1.xml
+++ b/app/src/main/res/layouts/my_purchase_history_fragment_layouts/layout/purchase_history_fragment_layout_state1.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.motion.MotionLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    app:layoutDescription="@xml/purchase_history_fragment_scenes"
-    android:background="@color/white"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineContentsTop"
@@ -215,4 +210,4 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
 
-</android.support.constraint.motion.MotionLayout>
+</android.support.constraint.ConstraintLayout>
