--- a/app/src/main/res/layouts/my_purchase_history_fragment_layouts/layout/purchase_history_list_fragment_layout.xml
+++ b/app/src/main/res/layouts/my_purchase_history_fragment_layouts/layout/purchase_history_list_fragment_layout.xml
@@ -20,19 +20,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/sortContentFragmentHolder"
-        android:layout_width="28dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@android:color/transparent"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtFullHistory"
-        app:layout_constraintTop_toTopOf="@+id/btnSort" />
-
     <Button
         android:id="@+id/btnSort"
         android:layout_width="wrap_content"
@@ -59,4 +46,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtFullHistory" />
+
+    <LinearLayout
+        android:id="@+id/sortContentFragmentHolder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/transparent"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/txtFullHistory"
+        app:layout_constraintTop_toTopOf="@+id/btnSort" />
 </android.support.constraint.ConstraintLayout>
