--- a/app/src/main/res/layouts/notification_fragment_layouts/consumption_track_layouts/layout/consumption_track_layout.xml
+++ b/app/src/main/res/layouts/notification_fragment_layouts/consumption_track_layouts/layout/consumption_track_layout.xml
@@ -123,15 +123,17 @@
 
     <TextView
         android:id="@+id/txtDisclaimer"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="300dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:alpha="0.0"
         android:fontFamily="@font/lato_bold"
         android:text="@string/est_disclaimer"
         android:textColor="@color/custom_grey"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnDisclaimer" />
 
