--- a/app/src/main/res/layouts/report_power_fragment_layouts/layout/report_power_fragment_layout_state2.xml
+++ b/app/src/main/res/layouts/report_power_fragment_layouts/layout/report_power_fragment_layout_state2.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.motion.MotionLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    app:layoutDescription="@xml/report_power_fragment_layout_scenes"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -48,11 +45,9 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/reportFragsHolder"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/guidelineButtonsTop"
         app:layout_constraintEnd_toEndOf="@+id/customProgressBarLayout"
@@ -113,7 +108,7 @@
         android:drawableLeft="@drawable/skip_icon"
         android:drawablePadding="-16dp"
         android:paddingLeft="16dp"
-        android:alpha="0.0"
+        android:alpha="1.0"
         app:layout_constraintEnd_toStartOf="@+id/guidelineBtnsEnd"
         app:layout_constraintStart_toStartOf="@+id/guidelineBtnsStart"
         app:layout_constraintTop_toBottomOf="@+id/btnNext" />
@@ -127,15 +122,16 @@
         android:textColor="@color/kplcBlue"
         android:fontFamily="@font/lato_regular"
         android:background="@android:color/transparent"
-        android:alpha="0.0"
+        android:alpha="1.0"
         app:layout_constraintStart_toStartOf="@+id/reportFragsHolder"
         app:layout_constraintTop_toTopOf="@+id/guidelineButtonsTop" />
 
     <Button
         android:id="@+id/btnSendReport"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="48dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="172dp"
+        android:layout_marginEnd="172dp"
         android:alpha="0.0"
         android:background="@drawable/login_signup_btn_bg"
         android:drawableRight="@drawable/arrow_right_white"
@@ -148,22 +144,8 @@
         android:textColor="@color/black"
         android:translationZ="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/btnNext"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineBtnSendEnd"
-        app:layout_constraintStart_toStartOf="@+id/guidelineBtnSendStart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnNext" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guidelineBtnSendStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.3111" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guidelineBtnSendEnd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.6889" />
-
-</android.support.constraint.motion.MotionLayout>
+</android.support.constraint.ConstraintLayout>
