--- a/app/src/main/res/layouts/settings_fragment_layouts/layout/settings_fragment_layout.xml
+++ b/app/src/main/res/layouts/settings_fragment_layouts/layout/settings_fragment_layout.xml
@@ -30,7 +30,7 @@
             android:id="@+id/changePersonalDetailsLayout"
             layout="@layout/settings_fragment_change_personal_details"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
@@ -44,7 +44,7 @@
             android:id="@+id/securitySettingsLayout"
             layout="@layout/settings_fragment_security_settings"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
