--- a/app/src/main/res/layouts/settings_fragment_layouts/layout/change_id_phone_layout.xml
+++ b/app/src/main/res/layouts/settings_fragment_layouts/layout/change_id_phone_layout.xml
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editOld" />
 
     <Button
-        android:id="@+id/btnChangePass"
+        android:id="@+id/btnChange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
