--- a/app/src/main/res/layouts/custom_dialog_layouts/layout/custom_dialog_motion_layout.xml
+++ b/app/src/main/res/layouts/custom_dialog_layouts/layout/custom_dialog_motion_layout.xml
@@ -89,61 +89,56 @@
         app:layout_constraintStart_toStartOf="@+id/dialogBg"
         app:layout_constraintTop_toBottomOf="@+id/txtMainWaitMsg" />
 
-    <ImageView
-        android:id="@+id/dialogErrorIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:alpha="0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/dialog_error_face" />
-
     <TextView
         android:id="@+id/txtFail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="8dp"
+        android:alpha="0"
         android:fontFamily="@font/lato_bold"
         android:text="@string/oops"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:alpha="0"
-        app:layout_constraintBottom_toBottomOf="@+id/dialogErrorIcon"
-        app:layout_constraintStart_toEndOf="@+id/dialogErrorIcon"
-        app:layout_constraintTop_toTopOf="@+id/dialogErrorIcon" />
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtFailMsg"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
+        android:alpha="0"
         android:fontFamily="@font/lato_bold"
         android:text="@string/log_in_err"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="14sp"
-        android:alpha="0"
+        app:layout_constraintBottom_toTopOf="@+id/btnOk"
         app:layout_constraintEnd_toEndOf="@+id/dialogBg"
-        app:layout_constraintStart_toStartOf="@+id/dialogErrorIcon"
-        app:layout_constraintTop_toBottomOf="@+id/dialogErrorIcon" />
+        app:layout_constraintStart_toStartOf="@+id/dialogBg" />
 
     <Button
         android:id="@+id/btnOk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginBottom="24dp"
+        android:alpha="0"
         android:background="@android:color/transparent"
+        android:enabled="false"
         android:fontFamily="@font/lato_bold"
         android:text="@string/okay"
-        android:textAlignment="viewEnd"
+        android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="15sp"
-        android:enabled="false"
-        android:alpha="0"
+        app:layout_constraintBottom_toBottomOf="@+id/dialogBg"
         app:layout_constraintEnd_toEndOf="@+id/txtFailMsg"
-        app:layout_constraintTop_toBottomOf="@+id/txtFailMsg" />
+        app:layout_constraintStart_toStartOf="@+id/txtFailMsg" />
 
 </android.support.constraint.motion.MotionLayout>
