--- a/app/src/main/res/layouts/sign_up_activity_layouts/layout/sign_up_activity.xml
+++ b/app/src/main/res/layouts/sign_up_activity_layouts/layout/sign_up_activity.xml
@@ -102,6 +102,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:maxLength="10"
         android:hint="@string/phone"
         android:inputType="phone"
         android:textColor="@color/custom_grey"
@@ -150,6 +151,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:maxLength="10"
         android:hint="@string/meter_no"
         android:inputType="number"
         android:textColor="@color/custom_grey"
